# vnx-gtk

./: CMakeLists.txt  README.md  codegen.sh  create_debian.sh
debian/: control
include/vnx/gtk/: Module.h  ObjectDisplay.h  ObjectView.h  PlayerWindow.h  Util.h  WindowModule.h
interface/: Module.vni  package.vni
modules/: PlayerWindow.vni
src/: Module.cpp  PlayerWindow.cpp  vnxgtkplayer.cpp
